# smol-fe

./: .cursorrules  .gitignore  AGENTS.md  AUDIT_NOTES.md  BACKEND_HANDOFF.md  BUILD_FAILURES.md  CAST_DEBUG.md  CHANGELOG.md  CHANGELOG.md.metadata.json  CHANGELOG.md.resolved  CHANGELOG.md.resolved.0  CHANGELOG.md.resolved.1  CHANGELOG.md.resolved.11  CHANGELOG.md.resolved.13  CHANGELOG.md.resolved.14  CHANGELOG.md.resolved.15  CHANGELOG.md.resolved.16  CHANGELOG.md.resolved.3  CHANGELOG.md.resolved.4  CHANGELOG.md.resolved.5  CHANGELOG.md.resolved.7  CHANGELOG.md.resolved.8  CHANGELOG.md.resolved.9  CLAUDE.md  CLAWDBOT_DIRECTIVES.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEBUGGING_GUIDE.md  DEVELOPER_SETUP.md.metadata.json  FAST_MODE_OPTIMIZATIONS.md  Inventory.md  LOCAL_TESTING_CHECKLIST.md  NOOT_MIXTAPE_AUTO.md  OPTIMIZATIONS.md  PASSKEY_WALLET_TRANSACTION_AUDIT.md  README-the-farm.md  README.md  README.md.resolved.0  README.md.resolved.1  SECURITY.md  (+162 more)
.agent/_reports/: CBNO_REVIEW.md  RALPH_DIFFSTAT.txt  RALPH_PROGRESS.md  RALPH_PROGRESS_GLOBAL.md  RALPH_PROGRESS_META.md  RALPH_PROGRESS_RP_ID.md  RALPH_RISK.md
.agent/rules/: 00_core.md  60_agent_loop.md  60_ralph_loop.md  90_security.md
.agent/scripts/: agent-loop.sh  ralph-loop.sh
.agent/workflows/: agent-loop.md  ralph-loop.md
.claude/: settings.json
.devcontainer/the-farm-noir/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: labs-scope-guard.yml  mixtape-auto-smoke.yml
SMOL_LABS/: RESEARCH_XLM_C_ADDRESSES.md
artifacts/: dorahacks-submission-description.md  judges-click-path.md  phase-c-proof.json  phase-c-wallet-proof.json  phase-g-proof.json  phase-h-quote-proof.json  phase-h-status.json  zk-dungeon-solo-120s-script.md  zk-dungeon-solo-120s.srt
audit/: 2025-10-04-modern-architecture-audit.md  2025-10-05-content-collections-analysis.md  2025-10-05-store-side-effects-refactoring.md  2025-10-05-view-transitions-implementation.md  2025-10-06-svelte5-astro-antipatterns-audit.md  FINAL_REFACTORING_REPORT.md  MODULARIZATION_AUDIT.md  REFACTORING_SUMMARY.md
contracts/batch-transfer/: Cargo.toml  README.md
contracts/batch-transfer/src/: lib.rs
contracts/commitment-pool/: Cargo.toml
contracts/commitment-pool/src/: lib.rs
contracts/commitment-pool/test_snapshots/test/: test_deposit_and_withdraw_full_flow.1.json  test_deposit_records_commitment.1.json  test_double_spend_rejected.1.json  test_duplicate_commitment_rejected.1.json  test_initialize.1.json  test_initialize_twice_fails.1.json  test_invalid_proof_rejected.1.json  test_withdraw_unknown_commitment_fails.1.json  test_zero_amount_deposit_rejected.1.json
contracts/farm-attestations/: Cargo.toml  README.md
contracts/farm-attestations/scripts/: deploy_mainnet.sh  invoke_attest_mainnet.sh  upgrade_mainnet.sh
contracts/farm-attestations/src/: lib.rs
contracts/risc0-groth16-verifier/: Cargo.toml
contracts/risc0-groth16-verifier/src/: lib.rs  vk_constants.rs  vkey.rs
contracts/tier-verifier/: Cargo.toml  DEPLOYER_KEY.md  MAINNET_CONTRACT.md  test_output.txt
contracts/tier-verifier/src/: lib.rs
contracts/tier-verifier/test_snapshots/test/: test_admin_flow.1.json  test_generic_verify.1.json  test_initialize.1.json  test_invalid_tier.1.json  test_legacy_attest_tier.1.json  test_tier_zero_guard.1.json
contracts/ultrahonk-verifier/: Cargo.toml
contracts/ultrahonk-verifier/src/: lib.rs
docs/: AGENTS.md  AUDIO_AND_PLAYER_STATE.md  CAST_DEBUG.md  CORE_PRODUCT_AUDIT.md  DATA_FLOW.md  DEBUGGING_GUIDE.md  DEVELOPER_SETUP.md  DIFF_SURFACE_MAP.md  DOCS_CONTRACT.md  FAST_MODE_OPTIMIZATIONS.md  FLOW_SPECS.json  HACKATHON_WIRING.md  HYPOTHESES_AND_FIX_PLAN.md  INDEX.md  INTEGRATION_REFERENCE.md  LABS_INTEGRITY.md  LOCAL_TESTING_CHECKLIST.md  NOTES.md  PASSKEY_WALLET_TRANSACTION_AUDIT.md  PERFORMANCE.md  PROD_PASSKEY_SMOKE_TEST.md  PROVER_SERVICE.md  REPO_MAP.json  REPO_MAP.md  REPRO_MATRIX.md  ROUTES_AND_PAGES.md  START_HERE.md  STATEDIAGRAM.md  STATE_MACHINE.md  STATE_OF_WORLD.md  TESTING.md  TOUCH_LOG.jsonl  TX_AUTH_IMPROVEMENTS.md  XREF_MAP.json  audio_and_player_state.md  client-side-migration.md  data_flow.md  hypotheses_and_fix_plan.md  labs-swapper-kale-forest-spec.md  mixtape-feature-plan.md  (+4 more)
labs/: registry.json
package/: package.json  risc_zero_verifier.d.ts  risc_zero_verifier.js  risc_zero_verifier_bg.js  risc_zero_verifier_bg.wasm
playwright-report/: index.html
proof-of-farm/: Cargo.toml
proof-of-farm/src/: lib.rs
public/: _headers  llms-full.txt  llms.txt  manifest.json  openapi.yaml  robots.txt  sw.js
remotion-studio/: package-lock.json  package.json  remotion.config.ts  tsconfig.json
scripts/: _api_count_meta.json  _snapshot_count_meta.json  audit-snapshot.js  backfill-minted-by.mjs  backfill-minters-v2.mjs  build-minter-cache.mjs  check-api-usernames.js  check-balances.mjs  check-docs.js  check-status.mjs  check-usernames.js  check-verifier-state.mjs  ci-smoke.ps1  ci-smoke.sh  ci-zk-smoke.sh  count-api-by-artist.js  debug-stellar-parsing.js  debug_contract.mjs  debug_error.html  decode_xdr.js  deploy-risc0-groth16-verifier.mjs  deploy-testnet-bundle.mjs  deploy-tier-verifier.mjs  deploy-ultrahonk-verifier-mainnet.mjs  deploy-vip.ps1  derive-key-from-mnemonic.js  derive-keys.mjs  discover_sig.js  dk-fill-upload.mjs  dk_form_analysis.json  ensure-noir-toolchain.sh  extract-minter-from-tx.mjs  extract-tags.js  extract-usernames.cjs  extract_cbno_songs.cjs  fetch-zk-events.mjs  fetch_pr_history.js  find-active-contract.js  find-active-issuer.js  find-mint-by-issuer.js  (+56 more)
src/: env.d.ts  middleware.ts
test-results/: .last-run.json
tests/: artistCollectedFeed.regression.test.js  artistRouteSSR.test.js  dungeonRelay.test.js  farmCircomInputs.test.js  mixtape-auto.test.js  tagStats.test.js
vip-worker/: README.md  TODO.md  package.json  pnpm-lock.yaml  wrangler.toml
zk/risc0-tier/host/: Cargo.toml
zk/risc0-tier/host/src/: main.rs
zk/risc0-tier/methods/: Cargo.toml
zk/risc0-tier/methods/guest/: Cargo.toml
zk/risc0-tier/methods/guest/src/: main.rs
(+845 files in other folders)
