[package]
name = "proof-of-farm"
version = "0.1.0"
edition = "2021"
description = "Proof of Farm — SHA-256 committed farming tier attestation badges on Stellar"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = "22.0.0"

[dev-dependencies]
soroban-sdk = { version = "22.0.0", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
