[package]
name = "commitment-pool"
version = "0.1.0"
edition = "2021"
description = "ZK Commitment Pool for Stellar Private Payments (research/pre-alpha)"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = "25.1.0"

[dev-dependencies]
soroban-sdk = { version = "25.1.0", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
