[package]
name = "farm-attestations"
version = "0.1.0"
edition = "2021"
description = "Mainnet attestation registry for THE FARM proof digests"

[lib]
crate-type = ["cdylib"]

[features]
testutils = ["soroban-sdk/testutils"]

[dependencies]
soroban-sdk = "21.7.1"

[dev-dependencies]
soroban-sdk = { version = "21.7.1", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
