[package]
name = "risc0-groth16-verifier"
version = "0.1.0"
edition = "2021"
description = "On-chain Groth16/BN254 verifier for RISC0 Groth16 receipts (Soroban, CAP-0074)"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = "25.1.0"

[dev-dependencies]
soroban-sdk = { version = "25.1.0", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

