[package]
name = "tier-verifier"
version = "0.1.0"
edition = "2021"
description = "Groth16 ZK tier verifier for Proof of Farm (Stellar Protocol 25)"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = "22.0.0"

[dev-dependencies]
soroban-sdk = { version = "22.0.0", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
