[package]
name = "ultrahonk-verifier"
version = "0.1.0"
edition = "2021"
description = "Upgradeable Soroban verifier for Noir UltraHonk proofs (stores VK on-chain)"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Keep Soroban SDK aligned with `ultrahonk_rust_verifier`'s pinned dependency
# to avoid `soroban-env-guest` version conflicts.
soroban-sdk = { git = "https://github.com/stellar/rs-soroban-sdk.git", rev = "acffbbd45be6a0a551146eebfc268d6f95078246", default-features = false, features = ["alloc"] }
ultrahonk_rust_verifier = { git = "https://github.com/yugocabrio/ultrahonk-rust-verifier.git", rev = "2a73c4ba11f073f1797d90915ebbb9eb9d09f445", default-features = false }

[dev-dependencies]
soroban-sdk = { git = "https://github.com/stellar/rs-soroban-sdk.git", rev = "acffbbd45be6a0a551146eebfc268d6f95078246", features = ["testutils", "alloc"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
