[package]
name = "methods"
version = "0.1.0"
edition = "2021"

[build-dependencies]
risc0-build = { version = "^3.0.5" }
# Windows/MSVC: ensure `risc0-zkvm-platform` defines host stubs for syscalls
# instead of leaving them as unresolved externs.
risc0-zkvm-platform = { version = "2.2.2", features = ["export-syscalls"] }

[package.metadata.risc0]
methods = ["guest"]
